# spawnhere

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: config.toml  hyprland-binds.conf
packaging/aur/: .SRCINFO  PKGBUILD
src/: config.rs  history.rs  hyprland.rs  main.rs  overlay.rs  pinned.rs
src/apps/: icon.rs  mod.rs
src/backend/: hyprland.rs  mod.rs
src/overlay/: mod.rs  wayland.rs
src/picker/: mod.rs  render.rs  text.rs
src/stroke/: mod.rs
