[package]
name = "spawnhere"
version = "0.1.0"
edition = "2021"
description = "Draw a gesture to spawn a floating window in that zone"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

smithay-client-toolkit = "0.19"
wayland-client = "0.31"
calloop = "0.13"
calloop-wayland-source = "0.3"

tiny-skia = "0.11"

# App picker
freedesktop-desktop-entry = "0.7"
freedesktop-icons = "0.4"
fontdue = "0.9"
nucleo-matcher = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
